fix scrolling screen appears on mobile

--- a/assets/src/scss/3-global/_navbar.scss
+++ b/assets/src/scss/3-global/_navbar.scss
@@ -85,7 +85,7 @@
     overflow-y: initial;
   }
   .navbar-nav {
-    margin: 1.5px -4px;
+    margin: 1.5px 0;
 
     > li.open > .dropdown-menu {
       position: absolute;
